src/objects/loan__Value_Sets__c.object
<CustomObject>
    <description>Values sets used to store value for segments of an account.</description>
    <fields>
        <fullName>loan__Description__c</fullName>
        <description>Description of value set</description>
        <label>Description</label>
        <length>255</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>loan__Effective_from__c</fullName>
        <defaultValue>$System.OriginDateTime</defaultValue>
        <description>Effectivity start date</description>
        <label>Effective From</label>
        <required>true</required>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>loan__Effective_to__c</fullName>
        <description>Date effective to</description>
        <label>Effective To</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>loan__Set_id__c</fullName>
        <description>Id of the set</description>
        <displayFormat>{0}</displayFormat>
        <label>Set_id</label>
        <type>AutoNumber</type>
    </fields>
    <label>Value Set</label>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Value Sets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <validationRules>
        <fullName>loan__Date_Validation</fullName>
        <active>true</active>
        <description>Date Validation</description>
        <errorConditionFormula>loan__Effective_from__c &gt;  loan__Effective_to__c</errorConditionFormula>
        <errorMessage>&apos;Effective From&apos; date should be before &apos;Effective To&apos; date</errorMessage>
    </validationRules>
</CustomObject>